--- a/angular-CRUD_Project/src/app/app.component.html
+++ b/angular-CRUD_Project/src/app/app.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link"  [routerLink]="['products', 'add']" >Add Products</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link"  [routerLink]="['products', 'add-to-cart']" >Cart</a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
